--- a/composer.json
+++ b/composer.json
@@ -5,7 +5,8 @@
     "require": {
         "symfony/console": "^6.0",
         "php": "^8.1",
-        "symfony/serializer": "^6.0"
+        "symfony/serializer": "^6.0",
+        "composer/semver": "^3.3"
     },
     "autoload": {
         "psr-4": {
