Output format: json, print_r and yaml

--- a/action.yml
+++ b/action.yml
@@ -9,7 +9,7 @@ inputs:
     required: false
     default: './composer.lock'
   format:
-    description: 'The output format (json by default, supported: markdown, json, or yaml)'
+    description: 'The output format (json by default, supported: markdown, json, print_r, or yaml)'
     required: false
     default: json
   disable-exit-code:
