--- a/composer.json
+++ b/composer.json
@@ -6,7 +6,8 @@
         "symfony/console": "^6.0",
         "php": "^8.1",
         "symfony/serializer": "^6.0",
-        "composer/semver": "^3.3"
+        "composer/semver": "^3.3",
+        "symfony/yaml": "^6.0"
     },
     "autoload": {
         "psr-4": {
