--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -30,5 +30,5 @@ jobs:
         uses: docker/build-push-action@v2
         with:
           push: true
-          dockerfile: app.Dockerfile
+          file: app.Dockerfile
           tags: ghcr.io/druidfi/security-checker-action:latest
