Renovate: Ignore tests/repo

--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -2,9 +2,10 @@ on:
   push:
     branches:
       - main
-    #paths:
-    #  - '.github/workflows/test-action.yaml'
-    #  - 'src/**'
+    paths:
+      - '.github/workflows/test-action.yaml'
+      - 'src/**'
+      - 'tests/**'
 
 name: Test Action
 
