Fix typo on filename

--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -3,7 +3,7 @@ on:
     branches:
       - main
     paths:
-      - '.github/workflows/test-action.yaml'
+      - '.github/workflows/test-action.yml'
       - 'src/**'
       - 'tests/**'
 
