Trigger with template changed

--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -4,6 +4,7 @@ on:
       - main
     paths:
       - '.github/workflows/test-action.yml'
+      - '.github/ISSUE_TEMPLATE_SEC.md'
       - 'src/**'
       - 'tests/**'
 
