--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -20,7 +20,7 @@ jobs:
 
       - uses: actions/checkout@v3
 
-      - uses: druidfi/security-checker-action@main
+      - uses: druidfi/security-checker-action@v1
         with:
           lock: tests/repo/composer.lock
           format: markdown
