Build docker if these files change

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,6 +6,9 @@ on:
       - '.github/workflows/build.yaml'
       - 'src/**'
       - 'app.Dockerfile'
+      - 'checker'
+      - 'Dockerfile'
+      - 'entrypoint.sh'
 
 name: Build Docker image
 
