--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -3,7 +3,7 @@ on:
     branches:
       - main
     paths:
-      - '.github/workflows/build.yaml'
+      - '.github/workflows/build.yml'
       - 'src/**'
       - 'app.Dockerfile'
       - 'checker'
