--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -47,4 +47,6 @@ jobs:
 
       - name: Check if JSON has correct data
         if: steps.value-from-json.outputs.test != '9.3.12'
-        run: exit 1
+        run: |
+          echo "::error::JSON does not have correct value: ${{ steps.value-from-json.outputs.test }}"
+          exit 1
